--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
 
   <header>
-    <img src="logo_ai.png" alt="WaaAi Logo" class="logo">
+    <img src="logo_ai.png" alt="WaaAi Logo" style="width: 250px; max-width: 90%; margin-bottom: 1rem;">
     <h1>WaaAi™</h1>
     <p class="description">All-in-One Network Tools for Android: Ping, Traceroute, Port Scanner, Speed Test, DNS, IP Geolocation — everything in one smart toolkit.</p>
     <div class="cta">
