--- a/index.html
+++ b/index.html
@@ -20,12 +20,9 @@
       text-align: center;
     }
     .logo {
-      width: 150px;
+      width: 250px;
+      max-width: 90%;
       margin-bottom: 1rem;
-    }
-    h1 {
-      font-size: 3rem;
-      margin: 0.5rem 0;
     }
     p.description {
       color: #ccc;
@@ -71,6 +68,24 @@
       margin: 1rem 0;
       font-size: 1.1rem;
     }
+
+    .screenshots {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1rem;
+      margin-top: 2rem;
+    }
+    .screenshots img {
+      width: 250px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+      transition: transform 0.3s ease;
+    }
+    .screenshots img:hover {
+      transform: scale(1.05);
+    }
+
     footer {
       text-align: center;
       padding: 2rem;
@@ -82,7 +97,7 @@
 <body>
 
   <header>
-    <img src="logo_ai.png" alt="WaaAi Logo" style="width: 250px; max-width: 90%; margin-bottom: 1rem;">
+    <img src="logo_ai.png" alt="WaaAi Logo" style="width: 240px; max-width: 90%; margin-bottom: 1.5rem;">
     <p class="description">All-in-One Network Tools for Android: Ping, Traceroute, Port Scanner, Speed Test, DNS, IP Geolocation — everything in one smart toolkit.</p>
     <div class="cta">
       <a href="#features">Explore Features</a>
@@ -111,6 +126,20 @@
     <p class="description">WaaAi™ is a lightweight yet powerful all-in-one networking toolkit designed for Android. Built with speed, clarity, and professionalism in mind, it's your everyday companion for network diagnostics and analysis — whether you're a casual user or an IT professional.</p>
   </section>
 
+  <section class="screenshots" id="screenshots">
+    <h2>Sneak Peek</h2>
+    <img src="Screenshot_HomeScreen.png" alt="Home Screen" />
+    <img src="Screenshot_NativeScreen.png" alt="Native Tools" />
+    <img src="Screenshot_PingTool.png" alt="Ping Tool" />
+    <img src="Screenshot_PortScanner.png" alt="Port Scanner" />
+    <img src="Screenshot_SpeedTest.png" alt="Speed Test" />
+    <img src="Screenshot_DomainAvaliable.png" alt="Domain Checker" />
+    <img src="Screenshot_DNS.png" alt="DNS Lookup" />
+    <img src="Screenshot_IpGeolocation.png" alt="IP Geolocation" />
+    <img src="Screenshot_WhoIs.png" alt="Whois Lookup" />
+    <img src="Screenshot_WebInsight.png" alt="Web Insight" />
+  </section>
+
   <section class="contact" id="contact">
     <h2>Contact Us</h2>
     <p class="description">
@@ -120,7 +149,7 @@
   </section>
 
   <footer>
-    © 2025 WaaAi™. Built with ❤️ by CiwAI Smart Digital
+    © 2025 WaaAi™. by CiwAI Smart Digital
   </footer>
 
 </body>
