--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="description" content="WaaAi™ - Smart Network Tools for Android">
   <title>WaaAi™ - Smart Network Tools</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.css">
   <style>
     * { box-sizing: border-box; }
     body {
@@ -69,21 +70,17 @@
       font-size: 1.1rem;
     }
 
-    .screenshots {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1rem;
+    .glider-contain {
       margin-top: 2rem;
     }
-    .screenshots img {
-      width: 250px;
+    .glider-slide img {
+      width: 100%;
       border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.3);
-      transition: transform 0.3s ease;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
     }
-    .screenshots img:hover {
-      transform: scale(1.05);
+
+    .glider-track {
+      align-items: center;
     }
 
     footer {
@@ -92,12 +89,37 @@
       font-size: 0.8rem;
       opacity: 0.5;
     }
+
+    @media (min-width: 768px) {
+      .glider-slide img {
+        width: 300px;
+      }
+    }
+
+    .whatsapp-float {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #25D366;
+      color: white;
+      font-size: 16px;
+      font-weight: bold;
+      padding: 12px 18px;
+      border-radius: 50px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      text-decoration: none;
+      z-index: 999;
+      transition: background 0.3s;
+    }
+    .whatsapp-float:hover {
+      background-color: #128C7E;
+    }
   </style>
 </head>
 <body>
 
   <header>
-    <img src="logo_ai.png" alt="WaaAi Logo" style="width: 240px; max-width: 90%; margin-bottom: 1.5rem;">
+    <img src="logo_ai.png" alt="WaaAi Logo" class="logo" />
     <p class="description">All-in-One Network Tools for Android: Ping, Traceroute, Port Scanner, Speed Test, DNS, IP Geolocation — everything in one smart toolkit.</p>
     <div class="cta">
       <a href="#features">Explore Features</a>
@@ -126,18 +148,22 @@
     <p class="description">WaaAi™ is a lightweight yet powerful all-in-one networking toolkit designed for Android. Built with speed, clarity, and professionalism in mind, it's your everyday companion for network diagnostics and analysis — whether you're a casual user or an IT professional.</p>
   </section>
 
-  <section class="screenshots" id="screenshots">
+  <section id="screenshots">
     <h2>Sneak Peek</h2>
-    <img src="Screenshot_HomeScreen.png" alt="Home Screen" />
-    <img src="Screenshot_NativeScreen.png" alt="Native Tools" />
-    <img src="Screenshot_PingTool.png" alt="Ping Tool" />
-    <img src="Screenshot_PortScanner.png" alt="Port Scanner" />
-    <img src="Screenshot_SpeedTest.png" alt="Speed Test" />
-    <img src="Screenshot_DomainAvaliable.png" alt="Domain Checker" />
-    <img src="Screenshot_DNS.png" alt="DNS Lookup" />
-    <img src="Screenshot_IpGeolocation.png" alt="IP Geolocation" />
-    <img src="Screenshot_WhoIs.png" alt="Whois Lookup" />
-    <img src="Screenshot_WebInsight.png" alt="Web Insight" />
+    <div class="glider-contain">
+      <div class="glider">
+        <div class="glider-slide"><img src="Screenshot_HomeScreen.png" alt="Home" /></div>
+        <div class="glider-slide"><img src="Screenshot_NativeScreen.png" alt="Native Tools" /></div>
+        <div class="glider-slide"><img src="Screenshot_PingTool.png" alt="Ping Tool" /></div>
+        <div class="glider-slide"><img src="Screenshot_PortScanner.png" alt="Port Scanner" /></div>
+        <div class="glider-slide"><img src="Screenshot_SpeedTest.png" alt="Speed Test" /></div>
+        <div class="glider-slide"><img src="Screenshot_DomainAvaliable.png" alt="Domain Checker" /></div>
+        <div class="glider-slide"><img src="Screenshot_DNS.png" alt="DNS" /></div>
+        <div class="glider-slide"><img src="Screenshot_IpGeolocation.png" alt="Geo IP" /></div>
+        <div class="glider-slide"><img src="Screenshot_WhoIs.png" alt="Whois" /></div>
+        <div class="glider-slide"><img src="Screenshot_WebInsight.png" alt="WebInsight" /></div>
+      </div>
+    </div>
   </section>
 
   <section class="contact" id="contact">
@@ -151,6 +177,34 @@
   <footer>
     © 2025 WaaAi™. by CiwAI Smart Digital
   </footer>
+
+  <!-- WA Button -->
+  <a href="https://wa.me/6285121111456" class="whatsapp-float" target="_blank" title="Chat via WhatsApp">
+    💬 Chat WA
+  </a>
+
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/glider-js@1/glider.min.js"></script>
+  <script>
+    window.addEventListener('load', function(){
+      const glider = new Glider(document.querySelector('.glider'), {
+        slidesToShow: 1,
+        slidesToScroll: 1,
+        draggable: true,
+        dots: false,
+        arrows: false,
+        rewind: true,
+        duration: 0.5,
+        scrollLock: true
+      });
+
+      // Autoplay
+      setInterval(() => {
+        const g = document.querySelector('.glider').glider;
+        g.scrollItem((g.page + 1) % g.slideEls.length, true);
+      }, 2500);
+    });
+  </script>
 
 </body>
 </html>
