--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@
     <h2>Contact Us</h2>
     <p class="description">
       Want to collaborate, feedback, or discuss a custom solution?<br>
-      Email us: <a href="mailto:ciwaidevtools@gmail.com" style="color:#00ffc8; text-decoration: none;">ciwaidevtools@gmail.com</a>
+      Email : <a href="mailto:ciwaidevtools@gmail.com" style="color:#00ffc8; text-decoration: none;">ciwaidevtools@gmail.com<br>
+      🌐 ciwaidevtools.netlify.app</a><br>
+      Let’s Build Something Smart Together!<br>
     </p>
   </section>
 
@@ -179,7 +181,7 @@
   </footer>
 
   <!-- WA Chat Button -->
-  <a href="https://wa.me/6285121111456" class="whatsapp-float" target="_blank" title="Chat via WhatsApp">
+  <a href="https://wa.me/6282260383973" class="whatsapp-float" target="_blank" title="Chat via WhatsApp">
     💬 Chat WA
   </a>
 
