--- a/index.html
+++ b/index.html
@@ -170,9 +170,9 @@
     <h2>Contact Us</h2>
     <p class="description">
       Want to collaborate, feedback, or discuss a custom solution?<br>
-      Email : <a href="mailto:ciwaidevtools@gmail.com" style="color:#00ffc8; text-decoration: none;">ciwaidevtools@gmail.com<br>
-      🌐 ciwaidevtools.netlify.app</a><br>
-      Let’s Build Something Smart Together!<br>
+      Email : <a href="mailto:ciwaidevtools@gmail.com" style="color:#00ffc8; text-decoration: none;">ciwaidevtools@gmail.com</a><br>
+      Website : <a href="ciwaidevtools.netlify.app" style="color:#00ffc8; text-decoration: none;">ciwaidevtools.netlify.app</a><br>
+      Let’s Build Something Smart Together!
     </p>
   </section>
 
