--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
     <!-- Tombol CTA -->
     <div class="flex flex-col sm:flex-row gap-4 justify-center">
       <a href="#services"
-        class="px-6 py-3 bg-indigo-600 text-white rounded-xl shadow-md hover:bg-indigo-700 transition">Explore
+        class="px-6 py-3 bg-blue-600 text-white rounded-xl shadow-md hover:bg-blue-700 transition">Explore
         Services</a>
       <a href="https://drive.google.com/uc?export=download&id=1h31rDSKdgAwKnO-OKyfhjRWIrjMOSifa" download
-        class="px-6 py-3 bg-blue-600 text-white rounded-xl shadow-md hover:bg-blue-700 transition">Download APK</a>
+        class="px-6 py-3 bg-orange-300 text-white rounded-xl shadow-md hover:bg-orange-400 transition">Download APK</a>
       <a href="https://play.google.com/store/apps/details?id=com.waaai.smarttools" target="_blank"
-        class="px-6 py-3 bg-gray-900 text-white rounded-xl shadow-md hover:bg-gray-800 transition">Get on Play Store</a>
+        class="px-6 py-3 bg-emerald-400 text-white rounded-xl shadow-md hover:bg-emerald-500 transition">Get on Play
+        Store</a>
     </div>
   </section>
 
