--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </section>
 
   <!-- Our Services -->
-  <section id="services" class="py-16 bg-[#f3f6fc] text-center">
+  <section id="services" class="py-16 bg-[#e0f2f1] text-center">
     <h2 class="text-3xl font-bold text-center mb-10">What We Do</h2>
     <div class="grid md:grid-cols-2 gap-8 max-w-5xl mx-auto">
       <div class="bg-white shadow-lg rounded-xl p-6 text-center">
