--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </section>
 
   <!-- Our Vision -->
-  <section id="vision" class="py-20 px-6 bg-[#f0f4fa] text-center">
+  <section id="vision" class="py-20 px-6 bg-[#e0f2f1] text-center">
     <h2 class="text-3xl md:text-4xl font-bold mb-6">Our Vision</h2>
     <p class="max-w-3xl mx-auto text-gray-700 text-lg leading-relaxed">
       At CiwAI™, we believe that technology should be simple, empowering, and accessible to everyone — from remote
@@ -58,7 +58,7 @@
   </section>
 
   <!-- Our Services -->
-  <section id="services" class="py-16 bg-[#e0f2f1] text-center">
+  <section id="services" class="py-16 bg-[#f0f4fa] text-center">
     <h2 class="text-3xl font-bold text-center mb-10">What We Do</h2>
     <div class="grid md:grid-cols-2 gap-8 max-w-5xl mx-auto">
       <div class="bg-white shadow-lg rounded-xl p-6 text-center">
