--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </section>
 
   <!-- Contact Us - Let’s Talk Style -->
-  <section id="contact" class="py-20 px-6 text-center bg-[#edf2f7]">
+  <section id="contact" class="py-20 px-6 text-center bg-[#cbd5e1]">
     <h2 class="text-4xl font-bold mb-4">☕ Let’s Talk!</h2>
     <p class="text-gray-700 max-w-xl mx-auto mb-8">
       Got an idea, project, or something you want? or just wanna say hi?
