--- a/index.html
+++ b/index.html
@@ -23,16 +23,19 @@
     </p>
 
     <!-- Tombol CTA -->
-    <div class="flex flex-col sm:flex-row gap-4 justify-center">
-      <a href="#services"
-        class="px-6 py-3 bg-blue-600 text-white rounded-xl shadow-md hover:bg-blue-700 transition">Explore
-        Services</a>
-      <a href="https://drive.google.com/uc?export=download&id=1h31rDSKdgAwKnO-OKyfhjRWIrjMOSifa" download
-        class="px-6 py-3 bg-orange-300 text-white rounded-xl shadow-md hover:bg-orange-400 transition">Download APK</a>
-      <a href="https://play.google.com/store/apps/details?id=com.waaai.smarttools" target="_blank"
-        class="px-6 py-3 bg-emerald-400 text-white rounded-xl shadow-md hover:bg-emerald-500 transition">Get on Play
-        Store</a>
-    </div>
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 max-w-xl mx-auto mt-6">
+  <a href="#services"
+    class="px-6 py-3 bg-blue-600 text-white rounded-xl shadow-md hover:bg-blue-700 transition text-center">Explore Services</a>
+
+  <a href="https://drive.google.com/uc?export=download&id=1h31rDSKdgAwKnO-OKyfhjRWIrjMOSifa" download
+    class="px-6 py-3 bg-orange-300 text-white rounded-xl shadow-md hover:bg-orange-400 transition text-center">Download APK</a>
+
+  <a href="https://play.google.com/store/apps/details?id=com.waaai.smarttools" target="_blank"
+    class="px-6 py-3 bg-emerald-400 text-white rounded-xl shadow-md hover:bg-emerald-500 transition text-center">Get on Play Store</a>
+
+  <a href="/pricing.html"
+    class="px-6 py-3 bg-indigo-500 text-white rounded-xl shadow-md hover:bg-indigo-600 transition text-center">View Pricing</a>
+</div>
   </section>
 
   <!-- About Us -->
