--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/png" href="favicon.png" />
   <meta name="description" content="CiwAI™ Smart Digital - Modern Solutions: Apps, Web, VPS/VPN, AI Bots" />
   <script src="https://cdn.tailwindcss.com"></script>
+<div class="absolute top-4 right-4 text-sm">
+  <a href="/index-id.html" class="text-gray-500 hover:underline">🇮🇩 Bahasa</a>
+</div>
 </head>
 
 <body class="bg-[#f9fafb] text-gray-900 font-sans scroll-smooth">
