--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <link rel="icon" type="image/png" href="favicon.png" />
   <meta name="description" content="CiwAI™ Smart Digital - Modern Solutions: Apps, Web, VPS/VPN, AI Bots" />
   <script src="https://cdn.tailwindcss.com"></script>
-<div class="absolute top-4 right-4 text-sm">
-  <a href="/index-id.html" class="text-gray-500 hover:underline">🇮🇩 Bahasa</a>
+<div class="absolute top-4 right-4 text-sm space-x-2">
+  <a href="/index.html" class="text-gray-600 hover:underline">🇬🇧 English</a>
+  <span>|</span>
+  <a href="/index-id.html" class="text-gray-600 hover:underline">🇮🇩 Bahasa</a>
 </div>
 </head>
 
