--- a/index-id.html
+++ b/index-id.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CiwAI™ Smart Digital</title>
   <script src="https://cdn.tailwindcss.com"></script>
+<div class="absolute top-4 right-4 text-sm space-x-2">
+  <a href="/index.html" class="text-gray-600 hover:underline">🇬🇧 English</a>
+  <span>|</span>
+  <a href="/index-id.html" class="text-gray-600 hover:underline">🇮🇩 Bahasa</a>
+</div>
 </head>
 <body class="bg-[#f9fafb] text-gray-900 font-sans scroll-smooth">
 
@@ -63,7 +68,7 @@
         <p>Website ringan & bersih dengan hosting yang aman dan skalabel.</p>
       </div>
       <div class="bg-white shadow-lg rounded-xl p-6 text-center">
-        <h3 class="text-xl font-semibold mb-2">VPS & VPN Kustom</h3>
+        <h3 class="text-xl font-semibold mb-2">VPS & VPN Pilihan</h3>
         <p>Solusi server pribadi sesuai kebutuhan bisnis atau privasi Anda.</p>
       </div>
       <div class="bg-white shadow-lg rounded-xl p-6 text-center">
