--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
 
   <!-- Hero Section -->
   <section id="home"
-    <section class="min-h-screen flex flex-col justify-start items-center text-center pt-8 px-6 pb-8 bg-gradient-to-b from-gray-50 to-white">
-    <img src="logo_ai.png" alt="WaaAi Logo" class="w-52 md:w-64 lg:w-72 mb-6 drop-shadow-xl" />
+    <section class="min-h-screen flex flex-col justify-start items-center text-center pt-4 px-6 pb-8 bg-gradient-to-b from-gray-50 to-white">
+    <img src="logo_ai.png" alt="WaaAi Logo" class="w-52 md:w-64 lg:w-72 mb-2 drop-shadow-xl" />
 
-    <h1 class="text-4xl md:text-6xl font-bold mb-4">CiwAI™ Smart Digital</h1>
+    <h1 class="text-3xl md:text-5xl font-bold mb-4 text-center max-w-md mx-auto">
+  CiwAI™ Smart Digital
+</h1>
     <p class="text-lg md:text-xl max-w-xl mb-6 text-gray-600">
       Simplifying modern technology for everyone — Mobile Apps, Web Design, VPS/VPN, and AI Chatbots.
     </p>
