--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     class="px-6 py-3 bg-orange-300 text-white rounded-xl shadow-md hover:bg-orange-400 transition text-center">Download APK</a>
 
   <a href="https://play.google.com/store/apps/details?id=com.waaai.smarttools" target="_blank"
-    class="px-6 py-3 bg-emerald-400 text-white rounded-xl shadow-md hover:bg-emerald-500 transition text-center">Get on Play Store</a>
+    class="px-6 py-3 bg-rose-400 text-white rounded-xl shadow-md hover:bg-rose-500 transition text-center">Get on Play Store</a>
   </div>
   </section>
 
