--- a/index-id.html
+++ b/index-id.html
@@ -31,7 +31,7 @@
       <a href="https://drive.google.com/uc?export=download&id=1h31rDSKdgAwKnO-OKyfhjRWIrjMOSifa" download
         class="px-6 py-3 bg-orange-300 text-white rounded-xl shadow-md hover:bg-orange-400 transition text-center">Unduh APK</a>
       <a href="https://play.google.com/store/apps/details?id=com.waaai.smarttools" target="_blank"
-        class="px-6 py-3 bg-emerald-400 text-white rounded-xl shadow-md hover:bg-emerald-500 transition text-center">Play Store</a>
+        class="px-6 py-3 bg-rose-400 text-white rounded-xl shadow-md hover:bg-rose-500 transition text-center">Play Store</a>
       <a href="/pricing.html"
     </div>
   </section>
