--- a/index.html
+++ b/index.html
@@ -11,12 +11,22 @@
 </head>
 
 <body class="bg-[#f9fafb] text-gray-900 font-sans scroll-smooth">
-<div class="absolute top-4 right-4 text-sm space-x-2">
-  <a href="/index.html" class="text-gray-600 hover:underline">🇬🇧 English</a>
+<div class="absolute top-4 right-4 text-sm space-x-2 z-50">
+  <a href="/index.html" onclick="localStorage.setItem('chosenLang', 'en')" class="text-gray-600 hover:underline">🇬🇧 English</a>
   <span>|</span>
-  <a href="/index-id.html" class="text-gray-600 hover:underline">🇮🇩 Bahasa</a>
+  <a href="/index-id.html" onclick="localStorage.setItem('chosenLang', 'id')" class="text-gray-600 hover:underline">🇮🇩 Bahasa</a>
 </div>
+<script>
+  // Cek apakah user sudah milih bahasa
+  const hasChosenLang = localStorage.getItem("chosenLang");
+  const userLang = navigator.language || navigator.userLanguage;
 
+  // Redirect otomatis hanya jika user belum pilih bahasa
+  if (!hasChosenLang && userLang.startsWith("id")) {
+    window.location.href = "/index-id.html";
+  }
+</script>
+  
   <!-- Hero Section -->
   <section id="home"
     <section class="min-h-screen flex flex-col justify-start items-center text-center pt-4 px-6 pb-8 bg-gradient-to-b from-gray-50 to-white">
