--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <a href="#services"
     class="px-6 py-3 bg-blue-600 text-white rounded-xl shadow-md hover:bg-blue-700 transition text-center">Explore Services</a>
 
-  <a href="https://drive.google.com/uc?export=download&id=1h31rDSKdgAwKnO-OKyfhjRWIrjMOSifa" download
+  <a href="https://drive.google.com/file/d/1-QsFdDV1wf4yWX9-8HVNGrGve6oGome-/view?usp=sharing" download
     class="px-6 py-3 bg-orange-300 text-white rounded-xl shadow-md hover:bg-orange-400 transition text-center">Download APK</a>
 
   <a href="https://play.google.com/store/apps/details?id=com.waaai.smarttools" target="_blank"
