--- a/index-id.html
+++ b/index-id.html
@@ -28,7 +28,7 @@
     <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 max-w-xl mx-auto mt-6 pb-4">
       <a href="#services"
         class="px-6 py-3 bg-blue-600 text-white rounded-xl shadow-md hover:bg-blue-700 transition text-center">Lihat Layanan</a>
-      <a href="https://drive.google.com/uc?export=download&id=1h31rDSKdgAwKnO-OKyfhjRWIrjMOSifa" download
+      <a href="https://drive.google.com/file/d/1-QsFdDV1wf4yWX9-8HVNGrGve6oGome-/view?usp=sharing" download
         class="px-6 py-3 bg-orange-300 text-white rounded-xl shadow-md hover:bg-orange-400 transition text-center">Unduh APK</a>
       <a href="https://play.google.com/store/apps/details?id=com.waaai.smarttools" target="_blank"
         class="px-6 py-3 bg-rose-400 text-white rounded-xl shadow-md hover:bg-rose-500 transition text-center">Play Store</a>
