--- a/index.html
+++ b/index.html
@@ -8,50 +8,50 @@
   <link rel="icon" type="image/png" href="favicon.png" />
   <meta name="description" content="CiwAI™ Smart Digital - Modern Solutions: Apps, Web, VPS/VPN, AI Bots" />
   <script src="https://cdn.tailwindcss.com"></script>
+
+  <!-- Optional: Auto Redirect to Bahasa if browser is Indonesian -->
+  <script>
+    const hasChosenLang = localStorage.getItem("chosenLang");
+    const userLang = navigator.language || navigator.userLanguage;
+    if (!hasChosenLang && userLang.startsWith("id")) {
+      window.location.href = "/index-id.html";
+    }
+  </script>
 </head>
 
 <body class="bg-[#f9fafb] text-gray-900 font-sans scroll-smooth">
-<div class="absolute top-4 right-4 text-sm space-x-2 z-50">
-  <a href="/index.html" onclick="localStorage.setItem('chosenLang', 'en')" class="text-gray-600 hover:underline">🇬🇧 English</a>
-  <span>|</span>
-  <a href="/index-id.html" onclick="localStorage.setItem('chosenLang', 'id')" class="text-gray-600 hover:underline">🇮🇩 Bahasa</a>
-</div>
-<!--
-<script>
-  // Cek apakah user sudah milih bahasa
-  const hasChosenLang = localStorage.getItem("chosenLang");
-  const userLang = navigator.language || navigator.userLanguage;
 
-  // Redirect otomatis hanya jika user belum pilih bahasa
-  if (!hasChosenLang && userLang.startsWith("id")) {
-    window.location.href = "/index-id.html";
-  }
-</script>
--->
-  
+  <!-- Language Switcher -->
+  <div class="absolute top-4 right-4 text-sm space-x-2 z-50">
+    <a href="/index.html" onclick="localStorage.setItem('chosenLang', 'en')" class="text-gray-600 hover:underline">🇬🇧 English</a>
+    <span>|</span>
+    <a href="/index-id.html" onclick="localStorage.setItem('chosenLang', 'id')" class="text-gray-600 hover:underline">🇮🇩 Bahasa</a>
+  </div>
+
   <!-- Hero Section -->
-  <section id="home"
-    <section class="min-h-screen flex flex-col justify-start items-center text-center pt-4 px-6 pb-8 bg-gradient-to-b from-gray-50 to-white">
+  <section id="home" class="min-h-screen flex flex-col justify-start items-center text-center pt-4 px-6 pb-8 bg-gradient-to-b from-gray-50 to-white">
     <img src="logo_ai.png" alt="WaaAi Logo" class="w-52 md:w-64 lg:w-72 mb-2 drop-shadow-xl" />
-
     <h1 class="text-3xl md:text-5xl font-bold mb-4 text-center max-w-md mx-auto">
-  CiwAI™ Smart Digital
-</h1>
+      CiwAI™ Smart Digital
+    </h1>
     <p class="text-lg md:text-xl max-w-xl mb-6 text-gray-600">
       Simplifying modern technology for everyone — Mobile Apps, Web Design, VPS/VPN, and AI Chatbots.
     </p>
 
-    <!-- Tombol CTA -->
+    <!-- CTA Buttons -->
     <div class="grid grid-cols-1 sm:grid-cols-2 gap-4 max-w-xl mx-auto mt-6">
-  <a href="#services"
-    class="px-6 py-3 bg-blue-600 text-white rounded-xl shadow-md hover:bg-blue-700 transition text-center">Explore Services</a>
-
-  <a href="https://drive.google.com/file/d/1-QsFdDV1wf4yWX9-8HVNGrGve6oGome-/view?usp=sharing" download
-    class="px-6 py-3 bg-orange-300 text-white rounded-xl shadow-md hover:bg-orange-400 transition text-center">Download APK</a>
-
-  <a href="https://play.google.com/store/apps/details?id=com.waaai.smarttools" target="_blank"
-    class="px-6 py-3 bg-rose-400 text-white rounded-xl shadow-md hover:bg-rose-500 transition text-center">Get on Play Store</a>
-  </div>
+      <a href="#services" class="px-6 py-3 bg-blue-600 text-white rounded-xl shadow-md hover:bg-blue-700 transition text-center">
+        Explore Services
+      </a>
+      <a href="https://drive.google.com/file/d/1-QsFdDV1wf4yWX9-8HVNGrGve6oGome-/view?usp=sharing" download
+        class="px-6 py-3 bg-orange-300 text-white rounded-xl shadow-md hover:bg-orange-400 transition text-center">
+        Download APK
+      </a>
+      <a href="https://play.google.com/store/apps/details?id=com.waaai.smarttools" target="_blank"
+        class="px-6 py-3 bg-rose-400 text-white rounded-xl shadow-md hover:bg-rose-500 transition text-center">
+        Get on Play Store
+      </a>
+    </div>
   </section>
 
   <!-- About Us -->
@@ -71,8 +71,7 @@
       villages to smart cities.
       <br /><br />
       Our vision is to become a trusted digital ally, building lightweight tools, private systems, and intuitive
-      solutions
-      that make everyday tasks smarter, not harder.
+      solutions that make everyday tasks smarter, not harder.
     </p>
   </section>
 
@@ -99,17 +98,16 @@
     </div>
   </section>
 
-  <!-- Contact Us - Let’s Talk Style -->
+  <!-- Contact Us -->
   <section id="contact" class="py-20 px-6 text-center bg-[#cbd5e1]">
     <h2 class="text-4xl font-bold mb-4">☕ Let’s Talk!</h2>
     <p class="text-gray-700 max-w-xl mx-auto mb-8">
       Got an idea, project, or something you want? or just wanna say hi?
       We’re open for collabs, custom apps and craft something meaningful.
     </p>
-
     <div class="text-lg text-gray-800 space-y-2">
-      <p>📩 Email: <strong><a href="mailto:ciwaismartdigital@gmail.com"
-            class="text-indigo-600 hover:underline">ciwaismartdigital@gmail.com</a></strong></p>
+      <p>📩 Email: <strong><a href="mailto:ciwaismartdigital@gmail.com" class="text-indigo-600 hover:underline">
+        ciwaismartdigital@gmail.com</a></strong></p>
     </div>
   </section>
 
@@ -118,16 +116,26 @@
     <p>&copy; 2025 CiwAI™ Smart Digital. All rights reserved.</p>
   </footer>
 
-  <!-- Floating WhatsApp Button - Mobile Only -->
-  <a href="https://wa.me/6282260383973" target="_blank"
-    class="block md:hidden fixed bottom-5 right-5 z-50 animate-bounce">
+  <!-- Floating WhatsApp Button (Mobile Only) -->
+  <a href="https://wa.me/6282260383973" target="_blank" class="block md:hidden fixed bottom-5 right-5 z-50 animate-bounce">
     <div class="bg-green-500 p-4 rounded-full shadow-lg hover:bg-green-600 transition animate-pulse">
       <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 32 32" class="w-6 h-6">
-        <path
-          d="M16 .3C7.3.3.2 7.4.2 16.1c0 2.8.7 5.5 2.1 7.9L0 32l8.2-2.1c2.3 1.2 4.9 1.8 7.5 1.8 8.7 0 15.8-7.1 15.8-15.9S24.7.3 16 .3zm0 29.3c-2.4 0-4.8-.6-6.9-1.8l-.5-.3-4.9 1.3 1.3-4.8-.3-.5c-1.2-2.1-1.9-4.5-1.9-6.9 0-7.5 6.1-13.6 13.6-13.6 3.6 0 7 1.4 9.5 3.9 2.5 2.5 3.9 5.9 3.9 9.5 0 7.5-6.1 13.6-13.8 13.6zm7.5-10.1c-.4-.2-2.4-1.2-2.7-1.3-.4-.1-.7-.2-1 .2s-1.2 1.3-1.5 1.5c-.3.2-.6.3-1 .1-.4-.2-1.7-.6-3.2-2-1.2-1.1-2-2.4-2.2-2.8-.2-.4 0-.6.2-.9.2-.2.4-.5.6-.7.2-.2.2-.4.3-.6.1-.2 0-.5 0-.7s-.9-2.2-1.2-3c-.3-.7-.7-.6-1-.6-.2 0-.5 0-.7 0-.2 0-.5.1-.7.3-.2.2-1 1-1 2.5 0 1.5 1 3 1.1 3.2.1.2 2 3.4 4.9 4.8 1.8.9 2.5 1 3.4.9.6-.1 1.8-.7 2-1.4.3-.6.3-1.1.2-1.3-.1-.1-.4-.2-.8-.4z" />
+        <path d="M16 .3C7.3.3.2 7.4.2 16.1c0 2.8.7 5.5 2.1 7.9L0 32l8.2-2.1c2.3 1.2 4.9 1.8 7.5 1.8
+        8.7 0 15.8-7.1 15.8-15.9S24.7.3 16 .3zm0 29.3c-2.4 0-4.8-.6-6.9-1.8l-.5-.3-4.9 1.3
+        1.3-4.8-.3-.5c-1.2-2.1-1.9-4.5-1.9-6.9 0-7.5 6.1-13.6 13.6-13.6
+        3.6 0 7 1.4 9.5 3.9 2.5 2.5 3.9 5.9 3.9 9.5
+        0 7.5-6.1 13.6-13.8 13.6zm7.5-10.1c-.4-.2-2.4-1.2-2.7-1.3
+        -.4-.1-.7-.2-1 .2s-1.2 1.3-1.5 1.5c-.3.2-.6.3-1 .1
+        -.4-.2-1.7-.6-3.2-2-1.2-1.1-2-2.4-2.2-2.8
+        -.2-.4 0-.6.2-.9.2-.2.4-.5.6-.7.2-.2.2-.4.3-.6
+        .1-.2 0-.5 0-.7s-.9-2.2-1.2-3c-.3-.7-.7-.6-1-.6
+        -.2 0-.5 0-.7 0-.2 0-.5.1-.7.3-.2.2-1 1-1 2.5
+        0 1.5 1 3 1.1 3.2.1.2 2 3.4 4.9 4.8
+        1.8.9 2.5 1 3.4.9.6-.1 1.8-.7 2-1.4
+        .3-.6.3-1.1.2-1.3-.1-.1-.4-.2-.8-.4z" />
       </svg>
     </div>
   </a>
-</body>
 
+</body>
 </html>
