--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
       <!-- Website SKH -->
       <div class="bg-white border rounded-xl p-6 shadow-md hover:shadow-xl transition transform hover:scale-105">
-        <h3 class="text-xl font-semibold mb-2">Website SKH Jannatul Aulad</h3>
+        <h3 class="text-xl font-semibold mb-2">Website SKH JA</h3>
         <p class="text-gray-600 mb-4 text-sm">A modern website for schools — lightweight, responsive, and easy
           to access.
         </p>
