--- a/index-id.html
+++ b/index-id.html
@@ -135,7 +135,7 @@
 
       <!-- Website SKH -->
       <div class="bg-white border rounded-xl p-6 shadow-md hover:shadow-xl transition transform hover:scale-105">
-        <h3 class="text-xl font-semibold mb-2">Website SKH Jannatul Aulad</h3>
+        <h3 class="text-xl font-semibold mb-2">Website SKH JA</h3>
         <p class="text-gray-600 mb-4 text-sm">Website modern untuk sekolah — ringan, responsif, dan mudah diakses.
         </p>
         <a href="https://jannatulaulad.netlify.app/" target="_blank"
