--- a/index-id.html
+++ b/index-id.html
@@ -29,7 +29,7 @@
   </div>
 
   <!-- Hero -->
-  <section id="home" class="pt-24 pb-32 flex flex-col justify-center items-center text-center px-6">
+  <section id="home" class="pt-10 pb-14 flex flex-col justify-center items-center text-center px-6 bg-gradient-to-b from-gray-50 to-white">
     <img src="logo_ai.png" alt="Logo WaaAi" class="w-52 md:w-64 lg:w-72 mb-6 drop-shadow-xl" data-aos="fade-down" />
     <h1 class="text-4xl md:text-6xl font-bold mb-4 max-w-2xl" data-aos="fade-up">
       CiwAI™ Smart Digital
