--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </div>
 
   <!-- Hero Section -->
-  <section id="home" class="pt-24 pb-32 flex flex-col justify-center items-center text-center px-6">
+  <section id="home" class="pt-10 pb-14 flex flex-col justify-center items-center text-center px-6 bg-gradient-to-b from-gray-50 to-white">
     <img src="logo_ai.png" alt="WaaAi Logo" class="w-52 md:w-64 lg:w-72 mb-6 drop-shadow-xl animate-fade-in"
       data-aos="fade-down" />
 
