--- a/index-id.html
+++ b/index-id.html
@@ -123,7 +123,7 @@
           speedtest, dan lainnya.</p>
         <a href="https://drive.google.com/uc?export=download&id=1h31rDSKdgAwKnO-OKyfhjRWIrjMOSifa"
           class="inline-block bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition text-sm">
-          📥 Download APK
+          📥 Unduh APK
         </a>
       </div>
 
@@ -135,7 +135,7 @@
         </p>
         <a href="https://drive.google.com/uc?export=download&id=1-QsFdDV1wf4yWX9-8HVNGrGve6oGome-"
           class="inline-block bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition text-sm">
-          📥 Download APK
+          📥 Unduh APK
         </a>
       </div>
 
