--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         </p>
         <a href="https://jannatulaulad.netlify.app/" target="_blank"
           class="inline-block bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition text-sm">
-          🌐 Lihat Website
+          🌐 Visit Site
         </a>
       </div>
 
