--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   </section>
 
   <!-- Our Projects -->
-  <section id="projects" class="py-20 px-6 bg-white text-center">
+  <section id="projects" class="py-20 px-6 bg-gradient-to-b from-[#fefce8] to-[#fef9c3] text-center">
     <h2 class="text-3xl md:text-4xl font-bold mb-10" data-aos="fade-up">🚀 Our Projects</h2>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10 max-w-6xl mx-auto" data-aos="fade-up">
 
