--- a/index-id.html
+++ b/index-id.html
@@ -212,7 +212,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="mt-auto py-8 bg-black text-white text-center">
+  <footer class="mt-auto py-8 bg-from-gray-800 to-gray-900 text-white text-center">
     <p>&copy; 2025 CiwAI™ Smart Digital. Seluruh hak cipta dilindungi.</p>
   </footer>
 
