--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="mt-auto py-8 bg-black text-white text-center">
+  <footer class="mt-auto py-8 bg-from-gray-800 to-gray-900 text-white text-center">
     <p>&copy; 2025 CiwAI™ Smart Digital. All rights reserved.</p>
   </footer>
 
