--- a/index-id.html
+++ b/index-id.html
@@ -200,7 +200,7 @@
   </section>
 
   <!-- Kontak -->
-  <section id="contact" class="py-24 px-6 text-center bg-[#cbd5e1]" data-aos="fade-up">
+  <section id="contact" class="py-24 px-6 text-center bg-[#e2e8f0]" data-aos="fade-up">
     <h2 class="text-4xl font-bold mb-4">☕ Ayo Ngobrol!</h2>
     <p class="text-gray-700 max-w-xl mx-auto mb-8">
       Punya ide, proyek, atau sekadar mau kenalan?
