--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="py-24 px-6 text-center bg-[#cbd5e1]" data-aos="fade-up">
+  <section id="contact" class="py-24 px-6 text-center bg-[#e2e8f0]" data-aos="fade-up">
     <h2 class="text-4xl font-bold mb-4">☕ Let’s Talk!</h2>
     <p class="text-gray-700 max-w-xl mx-auto mb-8">
       Got an idea, project, or something you want? or just wanna say hi?
