--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   </section>
 
   <!-- Our Projects -->
-  <section id="projects" class="py-20 px-6 bg-gradient-to-b from-[#fefce8] to-[#fef9c3] text-center">
+  <section id="projects" class="py-20 px-6 bg-gradient-to-b bg-gradient-to-br from-[#fafefe] to-[#ffffff] text-center">
     <h2 class="text-3xl md:text-4xl font-bold mb-10" data-aos="fade-up">🚀 Our Projects</h2>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10 max-w-6xl mx-auto" data-aos="fade-up">
 
@@ -194,7 +194,7 @@
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="py-24 px-6 text-center bg-gradient-to-br from-[#fafefe] to-[#ffffff]" data-aos="fade-up">
+  <section id="contact" class="py-24 px-6 text-center bg-[#e2e8f0]" data-aos="fade-up">
     <h2 class="text-4xl font-bold mb-4">☕ Let’s Talk!</h2>
     <p class="text-gray-700 max-w-xl mx-auto mb-8">
       Got an idea, project, or something you want? or just wanna say hi?
