--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <p class="text-gray-600 mb-4 text-sm">A modern website for schools — lightweight, responsive, and easy
           to access.
         </p>
-        <a href="https://jannatulaulad.netlify.app/" target="_blank"
+        <a href="target="_blank"
           class="inline-block bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition text-sm">
           🌐 Visit Site
         </a>
