--- a/index-id.html
+++ b/index-id.html
@@ -144,7 +144,7 @@
         <h3 class="text-xl font-semibold mb-2">Website SKH JA</h3>
         <p class="text-gray-600 mb-4 text-sm">Website modern untuk sekolah — ringan, responsif, dan mudah diakses.
         </p>
-        <a href="https://jannatulaulad.netlify.app/" target="_blank"
+        <a href="target="_blank"
           class="inline-block bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition text-sm">
           🌐 Lihat Website
         </a>
