--- a/index-id.html
+++ b/index-id.html
@@ -63,7 +63,7 @@
     <p class="text-gray-700 text-lg leading-relaxed">
       CiwAI™ adalah tim digital kreatif penuh semangat dari Indonesia yang membangun teknologi pintar, ringan,
       cerdas, dan
-      ramah pengguna. Kami fokus pada pengembangan aplikasi Android/iOS, pengenbangan website, server VPS/VPN, dan
+      ramah pengguna. Kami fokus pada pengembangan aplikasi Android/iOS, pengembangan website, server VPS/VPN, dan
       bot AI
       custom.
     </p>
@@ -111,7 +111,7 @@
   </section>
 
   <!-- Project Kami -->
-  <section id="projects" class="py-20 px-6 bg-gradient-to-br from-[#fafefe] to-[#ffffff] text-center">
+  <section id="projects" class="py-20 px-6 bg-gradient-to-b from-[#fefce8] to-[#fef9c3] text-center">
     <h2 class="text-3xl md:text-4xl font-bold mb-10" data-aos="fade-up">🚀 Project Kami</h2>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10 max-w-6xl mx-auto" data-aos="fade-up">
 
@@ -119,7 +119,7 @@
       <div class="bg-white border rounded-xl p-6 shadow-md hover:shadow-xl transition transform hover:scale-105">
         <h3 class="text-xl font-semibold mb-2">AllNetTools</h3>
         <p class="text-gray-600 mb-4 text-sm">Aplikasi Android berisi tools jaringan lengkap seperti ping,
-          traceroute,
+          port scanning,
           speedtest, dan lainnya.</p>
         <a href="https://drive.google.com/uc?export=download&id=1h31rDSKdgAwKnO-OKyfhjRWIrjMOSifa"
           class="inline-block bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition text-sm">
@@ -212,7 +212,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="mt-auto py-8 bg-black text-white text-center">
+  <footer class="mt-auto py-8 bg-gradient-to-tr from-gray-800 to-gray-900 text-white text-sm text-center">
     <p>&copy; 2025 CiwAI™ Smart Digital. Seluruh hak cipta dilindungi.</p>
   </footer>
 
