--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   </section>
 
   <!-- Our Projects -->
-  <section id="projects" class="py-20 px-6 bg-gradient-to-b bg-gradient-to-br from-[#fafefe] to-[#ffffff] text-center">
+  <section id="projects" class="py-20 px-6 bg-gradient-to-b from-[#fefce8] to-[#fef9c3] text-center">
     <h2 class="text-3xl md:text-4xl font-bold mb-10" data-aos="fade-up">🚀 Our Projects</h2>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10 max-w-6xl mx-auto" data-aos="fade-up">
 
@@ -114,7 +114,7 @@
       <div class="bg-white border rounded-xl p-6 shadow-md hover:shadow-xl transition transform hover:scale-105">
         <h3 class="text-xl font-semibold mb-2">AllNetTools</h3>
         <p class="text-gray-600 mb-4 text-sm">Android app packed with essential networking tools like Ping,
-          Traceroute, Speed Test, and more.
+          Port Scanning, Speed Test, and more.
         </p>
         <a href="https://drive.google.com/uc?export=download&id=1h31rDSKdgAwKnO-OKyfhjRWIrjMOSifa"
           class="inline-block bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition text-sm">
@@ -194,7 +194,7 @@
   </section>
 
   <!-- Contact Section -->
-  <section id="contact" class="py-24 px-6 text-center bg-[#e2e8f0]" data-aos="fade-up">
+  <section id="contact" class="py-24 px-6 text-center bg-gradient-to-br from-[#e0f7fa] to-[#e0f2f1]" data-aos="fade-up">
     <h2 class="text-4xl font-bold mb-4">☕ Let’s Talk!</h2>
     <p class="text-gray-700 max-w-xl mx-auto mb-8">
       Got an idea, project, or something you want? or just wanna say hi?
@@ -207,7 +207,7 @@
   </section>
 
   <!-- Footer -->
-  <footer class="mt-auto py-8 bg-black text-white text-center">
+  <footer class="mt-auto py-4 bg-gradient-to-tr from-gray-800 to-gray-900 text-white text-xs text-center">
     <p>&copy; 2025 CiwAI™ Smart Digital. All rights reserved.</p>
   </footer>
 
