--- a/index-id.html
+++ b/index-id.html
@@ -203,7 +203,7 @@
   <section id="contact" class="py-24 px-6 text-center bg-gradient-to-br from-[#e0f7fa] to-[#e0f2f1]" data-aos="fade-up">
     <h2 class="text-4xl font-bold mb-4">☕ Ayo Ngobrol!</h2>
     <p class="text-gray-700 max-w-xl mx-auto mb-8">
-      Punya ide, proyek, atau sekadar mau kenalan?
+      Punya ide, project, atau sekadar mau kenalan?
       Kami terbuka untuk kolaborasi, pengembangan aplikasi pilihan, dan solusi digital lainnya. </p>
     <div class="text-lg text-gray-800 space-y-2">
       <p>📩 Email: <strong><a href="mailto:ciwaismartdigital@gmail.com" class="text-indigo-600 hover:underline">
