--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <p class="text-gray-600 mb-4 text-sm">Android app packed with essential networking tools like Ping,
           Port Scanning, Speed Test, and more.
         </p>
-        <a href="https://drive.google.com/uc?export=download&id=1h31rDSKdgAwKnO-OKyfhjRWIrjMOSifa"
+        <a href="https://drive.google.com/file/d/1Pwevq33O-MO2_glAHeEelNuiH8V2JilC/view?usp=sharing"
           class="inline-block bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition text-sm">
           📥 Download APK
         </a>
