--- a/index-id.html
+++ b/index-id.html
@@ -121,7 +121,7 @@
         <p class="text-gray-600 mb-4 text-sm">Aplikasi Android berisi tools jaringan lengkap seperti ping,
           port scanning,
           speedtest, dan lainnya.</p>
-        <a href="hhttps://drive.google.com/file/d/1Pwevq33O-MO2_glAHeEelNuiH8V2JilC/view?usp=drive_link"
+        <a href="https://drive.google.com/uc?export=download&id=1Pwevq33O-MO2_glAHeEelNuiH8V2JilC"
           class="inline-block bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition text-sm">
           📥 Unduh APK
         </a>
@@ -133,7 +133,7 @@
         <p class="text-gray-600 mb-4 text-sm">Aplikasi kelola inventaris mobil showroom secara fleksibel dengan fitur
           pelaporan terintegrasi.
         </p>
-        <a href="https://drive.google.com/file/d/1-QsFdDV1wf4yWX9-8HVNGrGve6oGome-/view?usp=drive_link"
+        <a href="https://drive.google.com/uc?export=download&id=1-QsFdDV1wf4yWX9-8HVNGrGve6oGome-"
           class="inline-block bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition text-sm">
           📥 Unduh APK
         </a>
